Fixing some spacing

--- a/static/style.css
+++ b/static/style.css
@@ -36,7 +36,7 @@ body{
 
 h3{
     margin-top: 1rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
 
 }
 
@@ -92,7 +92,7 @@ h4{
 #room6{
     grid-row: 4;
     grid-column: 1/8;
-    width: 30%;
+    width: 40%;
     height: auto;
     justify-self: center;
     align-self: flex-end;
@@ -107,7 +107,7 @@ h4{
 #room7{
     grid-row: 4;
     grid-column: 8/13;
-    width: 30%;
+    width: 40%;
     height: auto;
     justify-self: center;
     align-self: flex-end;
